--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
     "hardhat": "^2.7.0",
+    "hardhat-abi-exporter": "^2.3.1",
     "hardhat-gas-reporter": "^1.0.6",
     "solidity-coverage": "^0.7.17"
   },
